# many-core-vis

./: README.md
examples/io/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  io  io.cxx  tmp.vtk
examples/uniform_grid/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  uniform_grid.cxx
examples/unstructured_mesh/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  unstructured_mesh  unstructured_mesh.cxx
notes/: ideas.txt  notes.txt  problems.txt
presentation/: demonstration.txt  notes.txt  outline.txt  vecadd.cl
project/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sobel.cu  sobel.cxx  sobel.h  sobel_funcs.cxx  timing.h
